--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -12,10 +12,28 @@ article.post {
 }
 
 .home-post-image {
+	aspect-ratio: 1 / 1;
 	width: 100%;
 	margin: 1rem 0;
 	border-radius: 12px;
 	align-self: center;
+	background-image: linear-gradient(90deg, #fff0 0%, #ffffff52 25%, #fff0 103% 103%);
+	background-size: 500% 500%;
+	animation: background-image-animation 2s ease-in-out infinite;
+}
+
+@keyframes background-image-animation {
+	0% {
+		background-position: 0% 50%;
+	}
+
+	50% {
+		background-position: 100% 50%;
+	}
+
+	100% {
+		background-position: 0% 50%;
+	}
 }
 
 .post p {
@@ -32,6 +50,7 @@ article.post {
 	display: flex;
 	align-items: center;
 }
+
 .post-info div {
 	display: flex;
 	flex: 1;
@@ -48,6 +67,7 @@ article.post {
 .post time {
 	font-size: smaller;
 }
+
 .post-buttons {
 	max-width: unset;
 	display: flex;
@@ -61,12 +81,48 @@ article.post {
 	padding: 0;
 	margin: 0 0.5rem;
 }
-.post-like-button {
-}
+
+.post-like-button {}
 
 .post-buttons button svg {
 	/* padding-left: 5px; */
 	height: 50px;
 	width: 1.5rem;
 	margin: 0 3px;
+}
+
+
+.grayscale-img {
+	filter: grayscale();
+	mix-blend-mode: screen;
+	transition: filter 2s ease-out;
+}
+
+.grayscale-img:hover {
+	filter: unset;
+}
+
+
+@keyframes slide-in {
+	from {
+		opacity: 0;
+		margin-top: 3rem;
+	}
+
+	to {
+		opacity: 1;
+		margin-top: 0;
+	}
+}
+
+@keyframes slide-out {
+	from {
+		opacity: 1;
+		margin-top: 3rem;
+	}
+
+	to {
+		opacity: 0;
+		margin-top: 0;
+	}
 }
