--- a/staff/anibal-estrella/prework/web/app.21/src/components/AddPostModal.css
+++ b/staff/anibal-estrella/prework/web/app.21/src/components/AddPostModal.css
@@ -9,11 +9,10 @@
 	}
 
 	.add-post-modal .preview-image-container {
-		margin: .5rem 0 0 0;
+		margin: 1rem 0;
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		flex-direction: row;
 	}
 	.add-post-modal button {
 		margin: 0 1rem 0 0;
