--- a/staff/anibal-estrella/prework/web/app.21/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app.21/src/components/Post.css
@@ -4,7 +4,7 @@ article.post {
 	flex-direction: column;
 	margin: 1rem 0;
 	color: var(--fontcolorlight);
-	min-width: 300px;
+	min-width: 370px;
 }
 
 .post * {
@@ -20,35 +20,6 @@ article.post {
 	background-image: linear-gradient(90deg, #fff0 0%, #ffffff52 25%, #fff0 103% 103%);
 	background-size: 500% 500%;
 	animation: background-image-animation 2s ease-in-out infinite;
-}
-
-.post-button{
-	color: var(--fontcolorlight);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	aspect-ratio: 1 / 1;
-	height: 2rem;
-    min-width: 2rem;
-    align-self: center;
-	padding: 0;
-	margin: 0 0.5rem;
-    border-radius: none;
-    text-transform: uppercase;
-    box-shadow: none;
-	background-color: transparent;
-    background-image: none;
-    transition: color .2s ease;
-}
-
-
-.post-button:hover {
-	box-shadow: none;
-	color: var(--myRed);
-}
-
-.post-button:active, .post-button:focus {
-	background-color: transparent;
 }
 
 @keyframes background-image-animation {
@@ -103,7 +74,13 @@ article.post {
 	justify-content: center;
 }
 
-
+.post-buttons button {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0;
+	margin: 0 0.5rem;
+}
 
 .post-like-button {}
 
