--- a/staff/anibal-estrella/prework/web/app/src/components/Menu.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Menu.css
@@ -1,3 +1,44 @@
+.home-menu {
+	position: fixed;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	text-align: center;
+	background-color: var(--basecolor-80);
+ 		backdrop-filter: blur(10px);
+}
+.home-menu ul {
+	list-style: none;
+	padding: 0;
+	text-align: left;
+}
+.home-menu ul li a {
+	display: block;
+	font-size: 4rem;
+	padding: 0.5rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	text-decoration: none;
+	transition: margin-left .2s ease;
+}
+.home-menu ul li a:hover {
+	color: var(--myRed);
+	border-radius: 20px;
+	box-shadow: none;
+	background-image: none;
+	margin-left: 1rem;
+
+}
+.home-menu ul li a:active {
+	box-shadow: 2px 2px 2px var(--basecolor);
+	background-image: none;
+	box-shadow: none;
+	color: var(--myLime);
+}
+
+.home-menu nav {
+	display: flex;
+}
 .menu-close {
 	position: absolute;
 	top: 0;
