--- a/staff/anibal-estrella/prework/web/app/src/components/Menu.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Menu.css
@@ -5,13 +5,16 @@
 	height: 100%;
 	text-align: center;
 	background-color: var(--basecolor-80);
- 		backdrop-filter: blur(10px);
+	backdrop-filter: blur(10px);
 }
+
 .home-menu ul {
 	list-style: none;
 	padding: 0;
 	text-align: left;
+	width: 100%;
 }
+
 .home-menu ul li a {
 	display: block;
 	font-size: 4rem;
@@ -19,16 +22,18 @@
 	font-weight: 700;
 	text-transform: uppercase;
 	text-decoration: none;
-	transition: margin-left .2s ease;
+	transition: padding-left .2s ease;
 }
+
 .home-menu ul li a:hover {
 	color: var(--myRed);
 	border-radius: 20px;
 	box-shadow: none;
 	background-image: none;
-	margin-left: 1rem;
+	padding-left: 2rem;
 
 }
+
 .home-menu ul li a:active {
 	box-shadow: 2px 2px 2px var(--basecolor);
 	background-image: none;
@@ -39,6 +44,7 @@
 .home-menu nav {
 	display: flex;
 }
+
 .menu-close {
 	position: absolute;
 	top: 0;
@@ -53,12 +59,59 @@
 	padding: unset;
 	margin: unset;
 }
-a.close-menu:hover {
-	background-image: none !important;
-	/* border: 1px solid var(--fontcolorlight); */
-    opacity: 50%;
-}
+
+
 .menu-close .close-menu svg {
 	width: 30px;
 	height: 30px;
+}
+
+.theme {
+	color: #fff;
+	text-transform: uppercase;
+	display: flex;
+	align-items: center;
+	padding:  1rem 0 0 1rem;
+}
+
+.toggle-theme {
+	position: relative;
+	width: 44px;
+	height: 24px;
+	-webkit-appearance: none;
+	appearance: none;
+	background: var(--myRed);
+	outline: none;
+	border-radius: 2rem;
+	cursor: pointer;
+	box-shadow: inset 0 0 5px rgb(0 0 0 / 50%);
+	margin: 0 1rem;
+}
+
+.toggle-theme::before {
+	content: "";
+	width: 24px;
+	height: 24px;
+	border-radius: 50%;
+	background: #fff;
+	position: absolute;
+	top: 0;
+	left: 0;
+	transition: 0.3s;
+}
+
+.toggle-theme:checked::before {
+	transform: translateX(100%);
+	background: #fff;
+}
+
+.toggle-theme:checked {
+	background: var(--myLime);
+}
+
+
+.home-menu ul li a.close-menu:hover {
+	background-image: none !important;
+	/* border: 1px solid var(--fontcolorlight); */
+	padding-left: 0;
 }
