--- a/staff/anibal-estrella/prework/web/app/src/components/AddPostModal.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/AddPostModal.css
@@ -1,12 +1,13 @@
 @layer add-post-modal {
 	.add-post-th {
-		aspect-ratio: 1 / 1;
-		width: 250px;
-		align-self: center;
-		border-radius: 10px;
 		border: 1px solid var(--fontcolorlight);
         background-color: var(--basecolor);
-	}
+        aspect-ratio: 1 / 1;
+        width: 250px;
+        align-self: center;
+        border-radius: 10px;
+        margin: 1rem 0 0 0;
+    }
 
 	.add-post-modal .preview-image-container {
 		margin: .5rem 0 0 0;
@@ -23,6 +24,38 @@
 		padding: 1rem 0;
 	}
     
+	button.preview-image-button {
+		margin: 0 1rem 0 1rem;
+	}
+
+	.preview-image-container {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+	}
+
+
+	.add-post-modal .preview-image {
+		margin: 1rem 0;
+	}
+
+	.input-preview {
+		margin: 0 .5rem 0 0 !important;
+		width: 100%;
+	}
+
+	
+	.add-post-modal textarea {
+		align-self: center;
+		width: 100%;
+	}
+	
+	.modal-actions-container {
+		display: flex;
+		justify-content: space-evenly;
+		align-items: center;
+		margin: 1rem 0 0 0;
+	}
 	button.preview-image-button {
 		margin: 0 1rem 0 1rem;
 	}
