--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -1,151 +1,159 @@
 article.post {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-	margin: 1rem 0;
-	color: var(--fontcolorlight);
-	min-width: 300px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    margin: 1rem 0;
+    color: var(--fontcolorlight);
+    min-width: 300px;
 }
 
-.post * {
-	max-width: 800px;
+
+.post-wrapper {
+    max-width: 600px;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    margin: 1rem 0 0 0;
 }
 
 .home-post-image {
-	aspect-ratio: 1 / 1;
-	width: 100%;
-	margin: 1rem 0;
-	border-radius: 12px;
-	align-self: center;
-	background-image: linear-gradient(90deg, #fff0 0%, #ffffff52 25%, #fff0 103% 103%);
-	background-size: 500% 500%;
-	animation: background-image-animation 2s ease-in-out infinite;
+    aspect-ratio: 1 / 1;
+    width: 100%; 
+    max-width:calc(100% - 2rem); 
+    height: auto;
+    border-radius: 12px;
+    align-self: center;
+    background-image: linear-gradient(90deg, #fff0 0%, #ffffff52 25%, #fff0 103% 103%);
+    background-size: 500% 500%;
+    animation: background-image-animation 2s ease-in-out infinite;
 }
 
-.post-button{
-	color: var(--fontcolorlight);
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	aspect-ratio: 1 / 1;
-	height: 2rem;
-    min-width: 2rem;
-    align-self: center;
-	padding: 0;
-	margin: 0 0.5rem;
+.post-buttons-wrapper {
+    width: 100%;
+    min-width: 3rem; 
+    max-width:fit-content;
+    display: flex;
+    flex-direction: column;
+    align-content: flex-start;
+    justify-content: flex-start;
+}
+.post-button {
+    aspect-ratio: 1 / 1;
+    color: var(--fontcolorlight);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 4rem;
+    width: 2rem;
+    padding: 0;
+    margin: 0 0.5rem;
     border-radius: none;
     text-transform: uppercase;
     box-shadow: none;
-	background-color: transparent;
+    background-color: transparent;
     background-image: none;
     transition: color .2s ease;
 }
 
 
-.post-button:hover {
-	box-shadow: none;
-	color: var(--myRed);
+
+.post-buttons-wrapper button svg {
+    /* padding-left: 5px; */
+    height: 50px;
+    width: 1.5rem;
+    margin: 0 3px;
 }
 
-.post-button:active, .post-button:focus {
-	background-color: transparent;
+.post-button:hover {
+    box-shadow: none;
+    color: var(--myRed);
+}
+
+.post-button:active,
+.post-button:focus {
+    background-color: transparent;
 }
 
 @keyframes background-image-animation {
-	0% {
-		background-position: 0% 50%;
-	}
+    0% {
+        background-position: 0% 50%;
+    }
 
-	50% {
-		background-position: 100% 50%;
-	}
+    50% {
+        background-position: 100% 50%;
+    }
 
-	100% {
-		background-position: 0% 50%;
-	}
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 .post p {
-	margin: 1rem 0;
-	align-self: center;
+    margin: 1rem 0;
+    align-self: center;
+    max-width: 600px;
 }
 
 .home-post-avatar {
-	grid-row: span 2;
-	margin-right: 1rem;
+    grid-row: span 2;
+    margin-right: 1rem;
 }
 
 .post-info {
-	display: flex;
-	align-items: center;
+    display: flex;
+    align-items: center;
 }
 
 .post-info div {
-	display: flex;
-	flex: 1;
-	flex-direction: column;
-	overflow: hidden;
-	flex-basis: content;
-	justify-content: flex-start;
+    display: flex;
+    flex: 1;
+    flex-direction: column;
+    overflow: hidden;
+    flex-basis: content;
+    justify-content: flex-start;
 }
 
 .post h3 {
-	/* align-self: end; */
+    /* align-self: end; */
 }
 
 .post time {
-	font-size: smaller;
+    font-size: smaller;
 }
 
-.post-buttons {
-	max-width: unset;
-	display: flex;
-	justify-content: center;
-}
-
-
-
-.post-like-button {}
-
-.post-buttons button svg {
-	/* padding-left: 5px; */
-	height: 50px;
-	width: 1.5rem;
-	margin: 0 3px;
-}
 
 
 .grayscale-img {
-	filter: grayscale();
-	mix-blend-mode: screen;
-	transition: filter 2s ease-out;
+    filter: grayscale();
+    mix-blend-mode: screen;
+    transition: filter 2s ease-out;
 }
 
 .grayscale-img:hover {
-	filter: unset;
+    filter: unset;
 }
 
 
 @keyframes slide-in {
-	from {
-		opacity: 0;
-		margin-top: 3rem;
-	}
+    from {
+        opacity: 0;
+        margin-top: 3rem;
+    }
 
-	to {
-		opacity: 1;
-		margin-top: 0;
-	}
+    to {
+        opacity: 1;
+        margin-top: 0;
+    }
 }
 
 @keyframes slide-out {
-	from {
-		opacity: 1;
-		margin-top: 3rem;
-	}
+    from {
+        opacity: 1;
+        margin-top: 3rem;
+    }
 
-	to {
-		opacity: 0;
-		margin-top: 0;
-	}
+    to {
+        opacity: 0;
+        margin-top: 0;
+    }
 }
