--- a/staff/anibal-estrella/prework/web/app/src/style.css
+++ b/staff/anibal-estrella/prework/web/app/src/style.css
@@ -1,50 +1,50 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,500;1,700&display=swap");
 
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 *:focus {
-	outline: none;
+    outline: none;
 }
 
 :root {
-	--opacity-50: /50%;
-	--opacity-80: /80%;
-	--montserrat: "Montserrat", sans-serif;
-	--backcolor-values: 162 5% 20%;
-	--basecolor-values: 162 5% 6%;
-	--basecolor: hsl(var(--basecolor-values));
-	--backcolor: hsl(var(--backcolor-values));
-	--backcolor-80: hsl(var(--backcolor-values) var(--opacity-80));
-	--basecolor-80: hsl(var(--basecolor-values) var(--opacity-80));
-	--myGray: hsl(162, 10%, 40%);
-	--myLightGray: hsl(162, 10%, 70%);
-	--myLime: hsl(162, 100%, 45%);
-	--myLimeDark: hsl(162, 100%, 35%);
-	--myRed: hsl(340, 100%, 60%);
-	--myBlueDark: hsl(243, 100%, 22%);
-	--fontcolorlight: hsl(45, 6%, 86%);
-	--backgroundGradient: linear-gradient(315deg, var(--myLime) 0%, var(--myBlueDark) 100%);
-	--buttonGradient: linear-gradient(315deg, var(--myBlueDark) 0%, var(--myRed) 100%);
+    --opacity-50: /50%;
+    --opacity-80: /80%;
+    --montserrat: "Montserrat", sans-serif;
+    --backcolor-values: 162 5% 20%;
+    --basecolor-values: 162 5% 6%;
+    --basecolor: hsl(var(--basecolor-values));
+    --backcolor: hsl(var(--backcolor-values));
+    --backcolor-80: hsl(var(--backcolor-values) var(--opacity-80));
+    --basecolor-80: hsl(var(--basecolor-values) var(--opacity-80));
+    --myGray: hsl(162, 10%, 40%);
+    --myLightGray: hsl(162, 10%, 70%);
+    --myLime: hsl(162, 100%, 45%);
+    --myLimeDark: hsl(162, 100%, 35%);
+    --myRed: hsl(340, 100%, 60%);
+    --myBlueDark: hsl(243, 100%, 22%);
+    --fontcolorlight: hsl(45, 6%, 86%);
+    --backgroundGradient: linear-gradient(315deg, var(--myLime) 0%, var(--myBlueDark) 100%);
+    --buttonGradient: linear-gradient(315deg, var(--myBlueDark) 0%, var(--myRed) 100%);
 }
 
 :root.dark {
-	background-color: aqua;
+    background-color: aqua;
 }
 
 html {
-	height: 100%;
+    height: 100%;
 }
 
 body {
-	font-family: var(--montserrat);
-	background-color: var(--basecolor);
-	font-size: 1em;
-	padding: 0;
-	margin: 0;
-	scroll-behavior: smooth;
-	height: 100%;
+    font-family: var(--montserrat);
+    background-color: var(--basecolor);
+    font-size: 1em;
+    padding: 0;
+    margin: 0;
+    scroll-behavior: smooth;
+    height: 100%;
 }
 
 h1,
@@ -53,374 +53,375 @@ h3,
 p,
 a,
 label {
-	color: var(--fontcolorlight);
+    color: var(--fontcolorlight);
 }
 
 a:hover,
 a:hover h1 {
-	color: var(--myRed);
-	text-decoration: none;
+    color: var(--myRed);
+    text-decoration: none;
 }
 
 h2 {
-	font-size: 1.2rem;
+    font-size: 1.2rem;
 }
 
 h3 {
-	font-size: 0.9rem;
+    font-size: 0.9rem;
 }
 
 form {
-	display: flex;
-	flex-direction: column;
-	min-width: 200px;
-	width: 100%;
-	max-width: 50vw;
+    display: flex;
+    flex-direction: column;
+    min-width: 200px;
+    width: 100%;
+    max-width: 50vw;
 }
 
 #root {
-	height: 100%;
+    height: 100%;
 }
 
 section {
-	width: 100%;
-	max-width: 100%;
-	padding: 1rem;
+    width: 100%;
+    max-width: 100%;
+    padding: 1rem;
 }
 
 .icon {
-	width: 1.5rem;
-	font-size: 0;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
+    width: 1.5rem;
+    font-size: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 
 }
 
 .block-scroll {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .center-container {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	margin: auto;
-	height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin: auto;
+    height: 100%;
 }
 
 .inline-container {
-	display: flex;
-	align-items: center;
-	flex-direction: row;
-	align-self: center;
-	margin: auto;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    align-self: center;
+    margin: auto;
 }
 
 .login,
 .register {
-	min-width: fit-content;
-	width: 500px;
-	max-width: 50vw;
+    min-width: fit-content;
+    width: 500px;
+    max-width: 50vw;
 }
 
 .login h2,
 .register h2 {
-	margin: 1rem 0 2rem 0;
+    margin: 1rem 0 2rem 0;
 }
-
-
 
 .goto-login,
 .goto-register {
-	margin: 2rem 0 0 0;
-	padding: 1rem 0 0 0;
-	font-size: 0.9rem;
+    margin: 2rem 0 0 0;
+    padding: 1rem 0 0 0;
+    font-size: 0.9rem;
 }
 
 .login button,
 .register button {
-	margin: 2rem 0 0 0;
+    margin: 2rem 0 0 0;
 }
 
 .panel {
-	padding: 2rem;
-	min-width: max-content;
-	border-radius: 10px;
-	background-color: var(--backcolor);
-	box-shadow: 0px 0px 10px var(--basecolor);
+    padding: 2rem;
+    min-width: max-content;
+    border-radius: 10px;
+    background-color: var(--backcolor);
+    box-shadow: 0px 0px 10px var(--basecolor);
 }
 
 .home-profile section>section {
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	margin: 1rem 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 1rem 0;
 }
 
 .home-profile section>section h3 {
-	padding: 0 0 1rem 0;
+    padding: 0 0 1rem 0;
 }
 
 .home-profile section>section form {
-	max-width: 50vw;
-	min-width: 50px;
-	align-self: center;
+    max-width: 50vw;
+    min-width: 50px;
+    align-self: center;
 }
 
 h1,
 h2,
 h3 {
-	padding: 0;
-	margin: 0;
-	text-transform: uppercase;
-	letter-spacing: 0.1rem;
+    padding: 0;
+    margin: 0;
+    text-transform: uppercase;
+    letter-spacing: 0.1rem;
 }
 
 h1 {
-	text-align: center;
-	font-weight: 700;
+    text-align: center;
+    font-weight: 700;
 }
 
 
 .border-top-gradient {
-	border-width: 2px;
-	border-style: solid;
-	border-bottom: 0;
-	border-left: 0;
-	border-right: 0;
-	border-image: var(--buttonGradient) 1 100;
-	padding-top: .5rem;
+    border-width: 2px;
+    border-style: solid;
+    border-bottom: 0;
+    border-left: 0;
+    border-right: 0;
+    border-image: var(--buttonGradient) 1 100;
+    padding-top: .5rem;
 }
 
 form label {
-	font-weight: 500;
-	font-size: 0.8rem;
-	margin: 1rem 0 0 0;
-	text-transform: uppercase;
+    font-weight: 500;
+    font-size: 0.8rem;
+    margin: 1rem 0 0 0;
+    text-transform: uppercase;
 }
 
 ::placeholder {
-	color: var(--basecolor);
+    color: var(--basecolor);
 }
 
 textarea,
 input[type="text"],
 input[type="password"],
 input[type="url"] {
-	margin: 1rem 0 0 0;
-	padding: 1rem 2rem;
-	min-width: max-content;
-	height: 3rem;
-	border-radius: 25px;
-	border: none;
-	box-shadow: 0px 0px 5px var(--basecolor);
-	background-color: var(--myGray);
-	transition: background-color .5s ease;
+    margin: 1rem 0 0 0;
+    padding: 1rem 2rem;
+    min-width: max-content;
+    height: 3rem;
+    border-radius: 25px;
+    border: none;
+    box-shadow: 0px 0px 5px var(--basecolor);
+    background-color: var(--myGray);
+    transition: background-color .5s ease;
 }
 
 textarea:focus,
 input:focus {
-	box-shadow: none;
-	border: none;
-	background-color: var(--myLightGray);
+    box-shadow: none;
+    border: none;
+    background-color: var(--myLightGray);
 }
 
 button {
-	width: max-content;
-	min-height: 3rem;
-	align-self: center;
-	color: var(--fontcolorlight);
-	border: none;
-	border-radius: 25px;
-	padding: .5rem;
-	font-size: 0.8rem;
-	letter-spacing: 0.1rem;
-	cursor: pointer;
-	text-transform: uppercase;
-	box-shadow: 2px 2px 2px var(--basecolor);
-	min-width: 7rem;
-	background-image: var(--buttonGradient);
-	background-position: center;
-	background-size: 110%;
-	transition: box-shadow 0.2s ease, background-size .2s ease, background-position .5s ease;
+    border: none;
+    cursor: pointer;
+    align-self: center;
 }
 
-button:hover {
-	background-position: right;
-	background-size: 500%;
-	box-shadow: 5px 5px 5px var(--basecolor);
+.button {
+    width: max-content;
+    min-height: 3rem;
+    min-width: 7rem;
+    padding: .5rem;
+    border-radius: 25px;
+    font-size: 0.8rem;
+    letter-spacing: 0.1rem;
+    text-transform: uppercase;
+    color: var(--fontcolorlight);
+    background-position: center;
+    background-size: 110%;
+    background-image: var(--buttonGradient);
+    box-shadow: 2px 2px 2px var(--basecolor);
+    transition: box-shadow 0.2s ease, background-size .2s ease, background-position .5s ease;
 }
 
-button:active {
-	background-color: var(--myLime);
-	text-shadow: none;
-	box-shadow: none;
+.button:hover {
+    background-position: right;
+    background-size: 500%;
+    box-shadow: 5px 5px 5px var(--basecolor);
 }
 
-button:focus {
-	background-color: var(--myLime);
-	text-shadow: none;
-	box-shadow: none;
+.button:active {
+    background-color: var(--myLime);
+    text-shadow: none;
+    box-shadow: none;
+}
+
+.button:focus {
+    background-color: var(--myLime);
+    text-shadow: none;
+    box-shadow: none;
 }
 
 
 .side-in {
-	animation: fade-in 1s ease;
+    animation: fade-in 1s ease;
 }
 
 
 
 .overlay-panel-close {
-	position: absolute;
-	top: 0;
-	left: 0;
-	z-index: 0;
-	width: 100%;
-	height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    width: 100%;
+    height: 100%;
 }
 
 .add-post-modal,
 .edit-post-modal {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	position: fixed;
-	justify-content: center;
-	top: 0;
-	left: 0;
-	height: 100vh;
-	width: 100vw;
-	background-color: var(--basecolor-80);
-	backdrop-filter: blur(10px);
-	padding: 2rem;
-	z-index: 1;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: fixed;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: var(--basecolor-80);
+    backdrop-filter: blur(10px);
+    padding: 2rem;
+    z-index: 1;
 }
 
 .add-post-modal form,
 .edit-post-modal form {
-	padding: 2rem;
-	z-index: 2;
+    padding: 2rem;
+    z-index: 2;
 }
 
 
 .add-post-modal textarea,
 .edit-post-modal textarea {
-	padding: 1rem;
-	height: auto;
-	border-radius: 20px;
+    padding: 1rem;
+    height: auto;
+    border-radius: 20px;
 }
 
 .modal-post-headline {
-	margin: 0 0 1rem 0;
+    margin: 0 0 1rem 0;
 }
 
 button.menu-open {
-	all: unset;
-	height: 50px;
-	font-weight: 700;
-	font-size: 1.5rem;
-	color: var(--myLightGray);
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 10px;
-	border-radius: 0px 20px 20px 0px;
-	background-image: var(--buttonGradient);
+    all: unset;
+    height: 50px;
+    font-weight: 700;
+    font-size: 1.5rem;
+    color: var(--myLightGray);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    border-radius: 0px 20px 20px 0px;
+    background-image: var(--buttonGradient);
 }
 
 button.menu-open:hover {
-	background-image: none;
-	background-color: var(--myRed);
+    background-image: none;
+    background-color: var(--myRed);
 }
 
 button.menu-open:active {
-	opacity: 100%;
-	background-color: var(--fontcolorlight);
-	color: var(--backcolor);
+    opacity: 100%;
+    background-color: var(--fontcolorlight);
+    color: var(--backcolor);
 }
 
 @media screen and (max-width: 600px) {
-	button.menu-open {
-		height: 50px;
-		padding: 0 1rem;
-		margin: 0;
-		border-radius: 0;
-	}
+    button.menu-open {
+        height: 50px;
+        padding: 0 1rem;
+        margin: 0;
+        border-radius: 0;
+    }
 
-	section {
-		padding: .5rem;
-	}
+    section {
+        padding: .5rem;
+    }
 
-	article.post {
-		padding: 1rem;
-	}
+    article.post {
+        padding: 1rem;
+    }
 
-	.add-post-modal form {
-		min-width: 200px;
+    .add-post-modal form {
+        min-width: 200px;
+        max-width: 100%;
+    }
+
+    /* .home-post-image {
 		max-width: 100%;
-	}
-
-	.home-post-image {
-		max-width: 100%;
 		margin: .5rem 0 0 0;
-	}
+	} */
 
-	.add-post-modal,
-	.edit-post-modal {
-		min-width: 300px;
-	}
+    .add-post-modal,
+    .edit-post-modal {
+        min-width: 300px;
+    }
 
-	.home-menu ul li a {
-		font-size: 2rem;
-	}
+    .home-menu ul li a {
+        font-size: 2rem;
+    }
 
-	.menu-close {
-		margin: .5rem;
-	}
+    .menu-close {
+        margin: .5rem;
+    }
 
-	.post p {
-		margin: .5rem 0 0 0;
-	}
+    .post p {
+        margin: .5rem 0 0 0;
+    }
 
-	.post-buttons {
-		margin: .5rem 0 0 0;
-	}
+    .post-buttons {
+        margin: .5rem 0 0 0;
+    }
 
-	.add-post-modal textarea,
-	.edit-post-modal textarea {
-		max-height: 150px;
-	}
+    .add-post-modal textarea,
+    .edit-post-modal textarea {
+        max-height: 150px;
+    }
 
-	.add-post-th,
-	.edit-post-th {
-		width: 150px;
-		margin: .5rem 0 0 0;
-	}
+    .add-post-th,
+    .edit-post-th {
+        width: 150px;
+        margin: .5rem 0 0 0;
+    }
 
-	.preview-image-container,
-	.preview-image-container input {
-		margin: .5rem 0 0 0;
-		flex-direction: column;
-	}
+    .preview-image-container,
+    .preview-image-container input {
+        margin: .5rem 0 0 0;
+        flex-direction: column;
+    }
 
-	.preview-image-button,
-	form label,
-	.inline-container {
-		margin: .5rem 0 0 0;
-		padding: 0 0;
-	}
+    .preview-image-button,
+    form label,
+    .inline-container {
+        margin: .5rem 0 0 0;
+        padding: 0 0;
+    }
 
-	.save {
-		margin: 0;
-	}
+    .save {
+        margin: 0;
+    }
 
 }
 
 .off {
-	display: none;
-	animation: fade-out 0.3s ease;
+    display: none;
+    animation: fade-out 0.3s ease;
 }
