--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -1,8 +1,6 @@
 article.post {
     display: flex;
-    justify-content: center;
     flex-direction: column;
-    margin: 1rem 0;
     color: var(--fontcolorlight);
     min-width: 300px;
 }
@@ -21,32 +19,37 @@ article.post {
     width: 100%; 
     max-width:calc(100% - 2rem); 
     height: auto;
-    border-radius: 12px;
+    border-radius: 12px 0px 0px 12px  ;
     align-self: center;
     background-image: linear-gradient(90deg, #fff0 0%, #ffffff52 25%, #fff0 103% 103%);
     background-size: 500% 500%;
     animation: background-image-animation 2s ease-in-out infinite;
+    background-color: var(--basecolor);
+
 }
 
 .post-buttons-wrapper {
     width: 100%;
-    min-width: 3rem; 
     max-width:fit-content;
     display: flex;
     flex-direction: column;
     align-content: flex-start;
     justify-content: flex-start;
+    padding: 1rem 0.5rem;
+    background-color: var( --basecolor-50);
+    border-radius:0px 12px 12px 0px ;
+
 }
+
 .post-button {
     aspect-ratio: 1 / 1;
     color: var(--fontcolorlight);
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 4rem;
     width: 2rem;
     padding: 0;
-    margin: 0 0.5rem;
+    margin: 0 0 2rem 0;
     border-radius: none;
     text-transform: uppercase;
     box-shadow: none;
@@ -57,12 +60,12 @@ article.post {
 
 
 
-.post-buttons-wrapper button svg {
-    /* padding-left: 5px; */
+/* .post-buttons-wrapper button svg {
+    padding-left: 5px;
     height: 50px;
     width: 1.5rem;
     margin: 0 3px;
-}
+} */
 
 .post-button:hover {
     box-shadow: none;
