--- a/staff/anibal-estrella/prework/web/app/src/pages/Home.css
+++ b/staff/anibal-estrella/prework/web/app/src/pages/Home.css
@@ -166,6 +166,7 @@ footer.home-footer {
     .header-title-link {
         margin: 0px 0px 0px 1rem;
         text-decoration: none;
+        color: var(--fontcolorlight);
     }
 
     .footer-items-wrapper {
