--- a/staff/anibal-estrella/prework/web/app/src/components/Menu.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Menu.css
@@ -4,8 +4,12 @@
 	width: 100%;
 	height: 100%;
 	text-align: center;
-	background-color: var(--basecolor-80);
+	background-color: var(--myLightGray);
 	backdrop-filter: blur(10px);
+}
+
+:root.dark-theme .home-menu {
+	background-color: var(--basecolor-80);
 }
 
 .home-menu ul {
