--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -1,7 +1,7 @@
 article.post {
     display: flex;
     flex-direction: column;
-    color: var(--fontcolorlight);
+    color: var(--c-white);
     min-width: 300px;
 }
 
@@ -24,7 +24,7 @@ article.post {
     background-image: linear-gradient(90deg, #fff0 0%, #ffffff52 25%, #fff0 103% 103%);
     background-size: 500% 500%;
     animation: background-image-animation 2s ease-in-out infinite;
-    background-color: var(--basecolor);
+    background-color: var(--c-base);
 
 }
 
@@ -36,14 +36,14 @@ article.post {
     align-content: flex-start;
     justify-content: flex-start;
     padding: 1rem 0.5rem;
-    background-color: var( --basecolor-50);
+    background-color: var( --c-base--50);
     border-radius:0px 12px 12px 0px ;
 
 }
 
 .post-button {
     aspect-ratio: 1 / 1;
-    color: var(--fontcolorlight);
+    color: var(--c-gray_dark);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -55,21 +55,16 @@ article.post {
     box-shadow: none;
     background-color: transparent;
     background-image: none;
-    transition: color .2s ease;
+    transition: color 500ms ease;
 }
 
-
-
-/* .post-buttons-wrapper button svg {
-    padding-left: 5px;
-    height: 50px;
-    width: 1.5rem;
-    margin: 0 3px;
-} */
-
+:root.dark-theme .post-button{
+    color: var(--c-white);
+}
 .post-button:hover {
     box-shadow: none;
-    color: var(--myRed);
+    color: var(--c-red);
+    transition: color 100ms ease;
 }
 
 .post-button:active,
@@ -124,11 +119,11 @@ article.post {
 }
 
 .post time {
-    color: var(--basecolor);
+    color: var(--c-base);
     font-size: smaller;
 }
 :root.dark-theme .post time {
-color:var(--fontcolorlight);
+color:var(--c-white);
 }
 
 
