--- a/staff/anibal-estrella/prework/web/app/src/components/Post.css
+++ b/staff/anibal-estrella/prework/web/app/src/components/Post.css
@@ -49,7 +49,7 @@ article.post {
     align-items: center;
     width: 2rem;
     padding: 0;
-    margin: 0 0 1rem 0;
+    margin: 0 0 2rem 0;
     border-radius: none;
     text-transform: uppercase;
     box-shadow: none;
@@ -65,6 +65,11 @@ article.post {
     box-shadow: none;
     color: var(--c-red);
     transition: color 100ms ease;
+}
+
+
+:root.dark-theme .post-button:hover {
+    color: var(--c-red);
 }
 
 .post-button:active,
@@ -87,8 +92,9 @@ article.post {
 }
 
 .post p {
+    color: var(--c-gray);
     margin: 1rem 0;
-    font-size: 0.8rem;
+    font-size: 1rem;
     line-height: 1.3rem;
     margin: 1rem 0;
     align-self: center;
@@ -119,7 +125,7 @@ article.post {
 }
 
 .post time {
-    color: var(--c-base);
+    color: var(--c-gray);
     font-size: smaller;
 }
 :root.dark-theme .post time {
