--- a/staff/anibal-estrella/prework/web/app.17/src/style.css
+++ b/staff/anibal-estrella/prework/web/app.17/src/style.css
@@ -11,11 +11,11 @@
 :root {
 	--a100: 100%;
 	--montserrat: "Montserrat", sans-serif;
-	--backcolor-values: 162 5% 20%;
-	--opacity-80: /80%;
+	--backcolor-val: 162 5% 20%;
+	--op-80: /80%;
 	--basecolor: hsl(162, 5%, 6%);
-	--backcolor: hsl(var(--backcolor-values));
-	--backcolor-80: hsl(var(--backcolor-values) var(--opacity-80));
+	--backcolor: hsl(var(--backcolor-val));
+	--backcolor-80: hsl(var(--backcolor-val) var(--op-80));
 	--myGray: hsl(162, 10%, 40%);
 	--myLightGray: hsl(162, 10%, 70%);
 	--myLime: hsl(162, 100%, 45%);
