--- a/staff/anibal-estrella/prework/web/app.26/src/pages/Home.css
+++ b/staff/anibal-estrella/prework/web/app.26/src/pages/Home.css
@@ -25,7 +25,7 @@
     justify-content: flex-end;
     margin: 1rem;
     border-radius: 20px;
-    background: var(--c-background--gradient);
+    background: var(--c-bg-gr);
 }
 
 .hello-user {
@@ -103,7 +103,7 @@ footer.home-footer {
     margin: 1rem;
     height: 3rem;
     border-radius: 20px;
-    background: var(--c-background--gradient);
+    background: var(--c-bg-gr);
 }
 
 .home-footer button {
@@ -144,7 +144,7 @@ footer.home-footer {
     grid-row-gap: 0.5rem;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 600px)  {
     .home {
         padding-top: 4rem;
     }
@@ -171,7 +171,7 @@ footer.home-footer {
         margin: 0;
         height: 40px;
         border-radius: 0;
-        background: var(--c-background--gradient);
+        background: var(--c-bg-gr);
     }
     .post-list {
        
